# AgentX

./: .gitignore  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
agent_dist/orchestrator/: app.py
agent_dist/registry/: client.py
agent_dist/routing/: executor.py  models.py  planner.py  prompts.py  router.py
docker/: Dockerfile.agent  Dockerfile.orchestrator  Dockerfile.registry
